--- a/kibelezaPMS.csproj
+++ b/kibelezaPMS.csproj
@@ -58,6 +58,66 @@
     <Compile Include="02-Menu.Designer.cs">
       <DependentUpon>02-Menu.cs</DependentUpon>
     </Compile>
+    <Compile Include="03-Empresa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="03-Empresa.Designer.cs">
+      <DependentUpon>03-Empresa.cs</DependentUpon>
+    </Compile>
+    <Compile Include="04-Cliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="04-Cliente.Designer.cs">
+      <DependentUpon>04-Cliente.cs</DependentUpon>
+    </Compile>
+    <Compile Include="05-Servico.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="05-Servico.Designer.cs">
+      <DependentUpon>05-Servico.cs</DependentUpon>
+    </Compile>
+    <Compile Include="06-Funcionario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="06-Funcionario.Designer.cs">
+      <DependentUpon>06-Funcionario.cs</DependentUpon>
+    </Compile>
+    <Compile Include="07-Relatorio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="07-Relatorio.Designer.cs">
+      <DependentUpon>07-Relatorio.cs</DependentUpon>
+    </Compile>
+    <Compile Include="08-Contato.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="08-Contato.Designer.cs">
+      <DependentUpon>08-Contato.cs</DependentUpon>
+    </Compile>
+    <Compile Include="09-Email.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="09-Email.Designer.cs">
+      <DependentUpon>09-Email.cs</DependentUpon>
+    </Compile>
+    <Compile Include="10-CadEmpresa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="10-CadEmpresa.Designer.cs">
+      <DependentUpon>10-CadEmpresa.cs</DependentUpon>
+    </Compile>
+    <Compile Include="11-CadCliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="11-CadCliente.Designer.cs">
+      <DependentUpon>11-CadCliente.cs</DependentUpon>
+    </Compile>
+    <Compile Include="12-CadServico.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="12-CadServico.Designer.cs">
+      <DependentUpon>12-CadServico.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Variaveis.cs" />
@@ -66,6 +126,36 @@
     </EmbeddedResource>
     <EmbeddedResource Include="02-Menu.resx">
       <DependentUpon>02-Menu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="03-Empresa.resx">
+      <DependentUpon>03-Empresa.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="04-Cliente.resx">
+      <DependentUpon>04-Cliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="05-Servico.resx">
+      <DependentUpon>05-Servico.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="06-Funcionario.resx">
+      <DependentUpon>06-Funcionario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="07-Relatorio.resx">
+      <DependentUpon>07-Relatorio.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="08-Contato.resx">
+      <DependentUpon>08-Contato.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="09-Email.resx">
+      <DependentUpon>09-Email.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="10-CadEmpresa.resx">
+      <DependentUpon>10-CadEmpresa.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="11-CadCliente.resx">
+      <DependentUpon>11-CadCliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="12-CadServico.resx">
+      <DependentUpon>12-CadServico.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -191,6 +281,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="img\servico.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="img\refresh.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
