--- a/kibelezaPMS.csproj
+++ b/kibelezaPMS.csproj
@@ -118,6 +118,18 @@
     <Compile Include="12-CadServico.Designer.cs">
       <DependentUpon>12-CadServico.cs</DependentUpon>
     </Compile>
+    <Compile Include="13-CadFuncionario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="13-CadFuncionario.Designer.cs">
+      <DependentUpon>13-CadFuncionario.cs</DependentUpon>
+    </Compile>
+    <Compile Include="14-CadReserva.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="14-CadReserva.Designer.cs">
+      <DependentUpon>14-CadReserva.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Variaveis.cs" />
@@ -156,6 +168,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="12-CadServico.resx">
       <DependentUpon>12-CadServico.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="13-CadFuncionario.resx">
+      <DependentUpon>13-CadFuncionario.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="14-CadReserva.resx">
+      <DependentUpon>14-CadReserva.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
